<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/dashboardSignOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/sign_in_button_drawable"
                android:text="@string/sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboardFollowing" />

            <android.support.v7.widget.CardView
                android:id="@+id/dashboardUserInfoContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <ImageView
                        android:id="@+id/dashboardUserIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/dashboardUserLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:textSize="32sp"
                        tools:text="dannnoon" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/dashboardRepositories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_chevron_right_grey600_36dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/repositories"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboardUserInfoContainer" />

            <TextView
                android:id="@+id/dashboardStars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_chevron_right_grey600_36dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/stars"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboardRepositories" />

            <TextView
                android:id="@+id/dashboardFollowers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_chevron_right_grey600_36dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/followers"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboardStars" />

            <TextView
                android:id="@+id/dashboardFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_chevron_right_grey600_36dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/following"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboardFollowers" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>